# BarcodeForge

./: .gitignore  LICENSE  MANIFEST.in  README.md  final-tree.nh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: conda-build-test.yml  python-test.yml
barcodeforge/: auspice_tree_to_table.py  cli.py  format_tree.py  generate_barcodes.py  plot_barcode.py  ref_muts.py  utils.py
barcodeforge/assets/: RSVa-barcode.csv  RSVa-barcode.feather  lineages.tsv  reference.fasta  tree.nexus  tree.nwk
tests/: test_auspice_tree_to_table.py  test_cli.py  test_format_tree.py  test_generate_barcodes.py  test_init.py  test_plot_barcode.py  test_ref_muts.py  test_utils.py  test_version_consistency.py
